--- a/app/views/dispatch/index.html.erb
+++ b/app/views/dispatch/index.html.erb
@@ -10,7 +10,8 @@
     <div class="actions" style="border:0;">
       <%= text_field_tag "address", nil, :title => "Locate Address" -%>
       <%= submit_tag "Search", :onclick => "locate(); return false;" -%>
-      <span id="search-spinner" style="display: none;"></span>
+      <span id="search-message"></span>
+      <span id="search-spinner"></span>
     </div>
   </form>
 </div>
