--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -2,6 +2,20 @@
   <h1>Change Password</h1>
 </div>
 
+<% if current_user.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(current_user.errors.count, "error") %>
+      prohibited this information from being saved:
+    </h2>
+    <ul>
+      <% current_user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for current_user, :url => change_password_path do |f| %>
 <fieldset>
   <ol class="section first">
