--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
   <%= stylesheet_link_tag "jquery.weekcalendar.css" %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_tag do %>
+    <%= render :partial => "layouts/constants.js" %>
+  <% end %>
   <%= javascript_include_tag "autocomplete-rails.js" %>
   <%= javascript_include_tag "jquery.weekcalendar.js" %>
   <%= javascript_include_tag "jquery-ui-timepicker-addon.js" %>
