--- a/app/views/shared/_date_picker_javascript.html.erb
+++ b/app/views/shared/_date_picker_javascript.html.erb
@@ -5,8 +5,8 @@ function makeDatePickers () {
         ampm: true,
         stepMinute: 15,
         stepHour: 1,
-        hourMin: 7,
-        hourMax: 18,
+        hourMin: RidePilot.business_hours.start,
+        hourMax: RidePilot.business_hours.end,
         hourGrid: 2,
         minuteGrid: 15,
         timeFormat: 'hh:mm t',
