--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -39,7 +39,7 @@
       
       <li class="selfclear">
         <%= form.label :in_district, "In TriMet District:" %>
-        <%= form.select :in_district, options_for_select([["Yes", "true"], ["No", "false"]]) %>
+        <%= form.select :in_district, [["Yes", true], ["No", false]] %>
       </li>
       
       <li class="selfclear">
