--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -2,71 +2,6 @@
   <h1>Provider: <%= @provider.name %></h1>
 </div>
 
-<h2 class="section-header">Region Boundaries</h2>
-
-<div id="region">
-  <fieldset>
-    <div id="region-form">
-      <% if @provider.region_nw_corner
-           nw_y = @provider.region_nw_corner.y
-           nw_x = @provider.region_nw_corner.x
-         else
-           nw_y = ''
-           nw_x = ''
-         end
-         if @provider.region_se_corner
-           se_y = @provider.region_se_corner.y
-           se_x = @provider.region_se_corner.x
-         else
-           se_y = ''
-           se_x = ''
-         end
-      %>
-      <% form_tag save_region_provider_path do %>
-        <table>
-        <tr><td><h3>Northwest Corner</h4></td></tr>
-        <tr>
-          <td><%= label_tag "Latitude:" %></td>
-          <td>
-            <%= text_field_tag :region_north, nw_y %>
-            <span class="hint">(e.g. 45.971)</span>
-          </td>
-        <tr>
-          <td><%= label_tag "Longitude:" %></td>
-          <td>
-            <%= text_field_tag :region_west, nw_x %>
-            <span class="hint">(e.g. -123.358)</span>
-          </td>
-        </tr>
-        <tr><td><h3>Southeast Corner</h4></td></tr>
-        <tr>
-          <td><%= label_tag "Latitude:" %></td>
-          <td>
-            <%= text_field_tag :region_south, se_y %>
-            <span class="hint">(e.g. 45.342)</span>
-          </td>
-        </tr>
-        <tr>
-          <td><%= label_tag "Longitude:" %></td>
-          <td>
-            <%= text_field_tag :region_east, se_x %>
-            <span class="hint">(e.g. -121.922)</span>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><%= submit_tag "Save" %></td>
-        </tr>
-        </table>
-      <% end %>
-    </div>
-    <% if @provider.region_nw_corner and @provider.region_se_corner %>
-      <div id="region-preview"></div>
-    <% end %>
-  </fieldset>
-</div>
-<div class="clearfix"></div>
-
 <h2 class="section-header">Addresses</h2>
 
 <% form_tag search_addresses_path, :method => :get, :remote => true, :id => "search_addresses" do %>
@@ -342,6 +277,70 @@
   <%= @provider.name %>, please switch providers by using the dropdown
   menu at the top of this page.</p>
 <% end %>
+<hr />
+
+<h2 class="section-header">Region Boundaries</h2>
+
+<div id="region">
+  <div id="region-form">
+    <% if @provider.region_nw_corner
+         nw_y = @provider.region_nw_corner.y
+         nw_x = @provider.region_nw_corner.x
+       else
+         nw_y = ''
+         nw_x = ''
+       end
+       if @provider.region_se_corner
+         se_y = @provider.region_se_corner.y
+         se_x = @provider.region_se_corner.x
+       else
+         se_y = ''
+         se_x = ''
+       end
+    %>
+    <% form_tag save_region_provider_path do %>
+      <table>
+      <tr><th colspan="2"><h3>Northwest Corner</h4></th></tr>
+      <tr>
+        <td><%= label_tag "Latitude:" %></td>
+        <td>
+          <%= text_field_tag :region_north, nw_y %>
+          <span class="hint">(e.g. 45.971)</span>
+        </td>
+      <tr>
+        <td><%= label_tag "Longitude:" %></td>
+        <td>
+          <%= text_field_tag :region_west, nw_x %>
+          <span class="hint">(e.g. -123.358)</span>
+        </td>
+      </tr>
+      <tr><th colspan="2"><h3>Southeast Corner</h4></th></tr>
+      <tr>
+        <td><%= label_tag "Latitude:" %></td>
+        <td>
+          <%= text_field_tag :region_south, se_y %>
+          <span class="hint">(e.g. 45.342)</span>
+        </td>
+      </tr>
+      <tr>
+        <td><%= label_tag "Longitude:" %></td>
+        <td>
+          <%= text_field_tag :region_east, se_x %>
+          <span class="hint">(e.g. -121.922)</span>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><%= submit_tag "Save Region" %></td>
+      </tr>
+      </table>
+    <% end %>
+  </div>
+  <% if @provider.region_nw_corner and @provider.region_se_corner %>
+    <div id="region-preview"></div>
+  <% end %>
+</div>
+<div class="clearfix"></div>
 
 <hr />
 
