Hide weekday select buttons in Trips pages.
Condense the view as requested in #828.  Now requires a click of "Select Days
of Week" to expose the buttons, which disappear on focus-out.

--- a/app/views/trips/_weekday_select.html.erb
+++ b/app/views/trips/_weekday_select.html.erb
@@ -1,7 +1,19 @@
 <div id="weekday_select">
-  <input type="checkbox" id="weekday_sun" /><label for="weekday_sun">Sun</label>  <input type="checkbox" id="weekday_mon" /><label for="weekday_mon">Mon</label>
-  <input type="checkbox" id="weekday_tue" /><label for="weekday_tue">Tue</label>  <input type="checkbox" id="weekday_wed" /><label for="weekday_wed">Wed</label>
-  <input type="checkbox" id="weekday_thu" /><label for="weekday_thu">Thu</label>
-  <input type="checkbox" id="weekday_fri" /><label for="weekday_fri">Fri</label>
-  <input type="checkbox" id="weekday_sat" /><label for="weekday_sat">Sat</label>
+  <p>Select Days of Week...</p>
+  <div id="weekday_select_buttons" style="display: none">
+    <input type="checkbox" id="weekday_sun" />
+    <label for="weekday_sun">Sun</label>
+    <input type="checkbox" id="weekday_mon" />
+    <label for="weekday_mon">Mon</label>
+    <input type="checkbox" id="weekday_tue" />
+    <label for="weekday_tue">Tue</label>
+    <input type="checkbox" id="weekday_wed" />
+    <label for="weekday_wed">Wed</label>
+    <input type="checkbox" id="weekday_thu" />
+    <label for="weekday_thu">Thu</label>
+    <input type="checkbox" id="weekday_fri" />
+    <label for="weekday_fri">Fri</label>
+    <input type="checkbox" id="weekday_sat" />
+    <label for="weekday_sat">Sat</label>
+  </div>
 </div>
