--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -305,6 +305,12 @@
     }
 
     function initWeekdaySelect() {
+      $("#weekday_select").hover($.noop, function() {
+        $("#weekday_select_buttons").slideUp();
+      });
+      $("#weekday_select").click(function() {
+        $("#weekday_select_buttons").slideDown();
+      });
       $('#weekday_select').buttonset();
       buttons = $('#weekday_select input');
       for (var i = getFirstDayOfWeek();
