--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,8 +1,8 @@
 <div id="page-header">
   <h1>View Trips</h1>
+  <%= render :partial => 'weekday_select' %>
+  <div class="clearfix"></div>
 </div>
-
-<%= render :partial => 'weekday_select' %>
 
 <div id="calendar" data-start-time="<%= @week_start.to_i * 1000 %>"></div>
 
