--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1319,8 +1319,23 @@ body.trips div.wc-toolbar {
   position : relative;
 }
 
+body.trips #page-header h1 {
+  float: left;
+}
+
 body.trips #weekday_select {
-  margin: 0.5em 0;
+  float: left;
+}
+
+body.trips #weekday_select p {
+  margin: 0.6em 0 0.1em 1em;
+  color: #0081cc;
+  cursor: pointer;
+}
+
+body.trips #weekday_select_buttons {
+  margin: 1em;
+  width: 100%;
 }
 
 body.trips div.wc-toolbar div#vehicle_filter {
