Fix exception dispatch viewport admin.
Was using select instead of select_tag, which provides a hash of values
instead of a single value.  This is simpler.

--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -378,9 +378,8 @@
       <tr>
         <td><%= label_tag "Zoom:" %></td>
         <td>
-          <%= select :viewport_zoom, @provider.viewport_zoom,
-                     options_for_select(@zoom_choices,
-                                        @provider.viewport_zoom) %>
+          <%= select_tag :viewport_zoom, options_for_select(@zoom_choices,
+                [@provider.viewport_zoom.to_s, @provider.viewport_zoom.to_s]) %>
           <span class="hint">(e.g. 11)</span>
         </td>
       </tr>
