Add PU and DO address to trip list

--- a/app/views/trips/_day_row.html.erb
+++ b/app/views/trips/_day_row.html.erb
@@ -1,5 +1,5 @@
 <tr class="day">
-  <th colspan="<%= can?(:edit, Trip) ? 6 : 5 %>">
+  <th colspan="7">
     <%=format_time_for_listing_day day %>
   </th>
 </tr>
