--- a/app/views/trips/_list.html.erb
+++ b/app/views/trips/_list.html.erb
@@ -16,8 +16,10 @@
   <tr>
     <th>Pickup Time</th>
     <th>Customer</th>
-    <th>Called Back?</th>
+    <th>Pickup Address</th>
+    <th>Drop Off Address</th>
     <th>Run</th>
+    <th>Called Back?</th>
     <th>Result</th>
   </tr>
 
