--- a/app/views/trips/_trip_row.html.erb
+++ b/app/views/trips/_trip_row.html.erb
@@ -1,19 +1,25 @@
 <tr class="trip">
   <td>
     <% if can? :edit, trip %>
-      <%= link_to(format_time_for_listing(trip.pickup_time), edit_trip_path(trip), "data-remote"=>true, :title=>"Click to edit trip", :class => "trip") %>
+      <%= link_to(format_time_for_listing(trip.pickup_time), edit_trip_path(trip), "data-remote"=>true, :title=>"Click to edit trip") %>
     <% else %>
       <%= format_time_for_listing trip.pickup_time %>
     <% end %>
   </td>
   <td>
-    <%= link_to trip.customer.name, trip.customer, :class => "view-customer", :title => "Click to view customer record" %>
+    <%= link_to trip.customer.name, trip.customer, :title => "Click to view customer record" %>
   </td>
   <td>
-    <%= image_tag("tick-circle.png") if trip.customer_informed %>
+    <%= trip.pickup_address.try :address %>
+  </td>
+  <td>
+    <%= trip.dropoff_address.try :address %>
   </td>
   <td>
     <%= trip.run_text %>
+  </td>
+  <td>
+    <%= image_tag("tick-circle.png") if trip.customer_informed %>
   </td>
   <td>
     <%= display_trip_result(trip.trip_result) %>
