--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -398,9 +398,9 @@
 
 <script type="text/javascript" charset="utf-8">
   if ( window.location.protocol == "https:" )
-    document.write('<scr' + 'ipt type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?sensor=false"></scr' + 'ipt>');
+    document.write('<scr' + 'ipt type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?v=3.10&sensor=false"></scr' + 'ipt>');
   else
-    document.write('<scr' + 'ipt type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></scr' + 'ipt>');
+    document.write('<scr' + 'ipt type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.10&sensor=false"></scr' + 'ipt>');
 </script>
 
 <% if @provider.region_nw_corner and @provider.region_se_corner %>
