Track in/out of district on verifications report
Add the ability to see whether the pickup or drop off
addresses are in or out of district. Add links to addresses
with tooltips showing the address.

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -39,7 +39,7 @@
       
       <li class="selfclear">
         <%= form.label :in_district, "In TriMet District:" %>
-        <%= form.select :in_district, [["Yes", true], ["No", false]] %>
+        <%= form.select :in_district, [["Unspecified",nil], ["Yes", true], ["No", false]] %>
       </li>
       
       <li class="selfclear">
