--- a/app/views/reports/show_trips_for_verification.html.erb
+++ b/app/views/reports/show_trips_for_verification.html.erb
@@ -22,6 +22,7 @@
     <tr>
       <th>Pickup Time</th>
       <th>Customer Name</th>
+      <th>In Distict?</th>
       <th>Purpose</th>
       <th>Round Trip?</th>
       <th>Guest Count</th>
@@ -33,14 +34,14 @@
     
     <% @trips.group_by {|trip| trip.pickup_time.to_date}.each do |day, trips| %>
       <tr>
-        <th colspan="9">
+        <th colspan="10">
           <%=format_time_for_listing_day day %>
         </th>
       <tr>
       <% trips.each do |trip| %>
         <% if trip.errors.any? %>
           <tr>
-            <td colspan="8">
+            <td colspan="9">
               <%= render "shared/error_messages", :target => trip %>
             </td>
           <tr>
