--- a/app/views/runs/edit.html.erb
+++ b/app/views/runs/edit.html.erb
@@ -9,6 +9,7 @@
       <tr>
         <th>Pickup Time</th>
         <th>Customer Name</th>
+        <th>In Distict?</th>
         <th>Purpose</th>
         <th>Round Trip?</th>
         <th>Guest Count</th>
