--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -72,6 +72,9 @@
 
   <dt>Mobility notes:</dt>
   <dd><%= @customer.mobility_notes %></dd>
+
+  <dt>Medicaid eligible:</dt>
+  <dd><%= @customer.medicaid_eligible %></dd>
 </dl>
 
 <dl>
