--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -80,7 +80,10 @@
 <dl>
   <dt>Ethnicity:</dt>
   <dd><%= @customer.ethnicity %></dd>
-
+  
+  <dt>Prime number:</dt>
+  <dd><%= @customer.prime_number %></dd>
+  
   <dt>Emergency contact notes:</dt>
   <dd><%= @customer.emergency_contact_notes %></dd>
 
