adding mileage to trip form

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -166,6 +166,11 @@
       </li>
 
       <li class="selfclear">
+        <%= f.label :mileage, "Cab Mileage:" %>
+        <%= f.text_field :mileage %>
+      </li>
+
+      <li class="selfclear">
         <%= f.label :medicaid_eligible, "Medicaid Eligible:" %>
         <%= f.check_box :medicaid_eligible %>
       </li>
