Create a summary report of unique customers have received transportation in a date range

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -37,6 +37,19 @@
 
 <hr />
 
+<h2 class="section-header">Customer Trips In Range</h2>
+
+<%= form_for @trips_query, :url=>url_for(:action=>:customer_receiving_trips_in_range), :html=>{:method=>:get} do |f| %>
+  <fieldset>
+    <%= f.date_select  :start_date, :order => [:month,:day,:year] %>
+    through 
+    <%= f.date_select  :before_end_date, :order => [:month,:day,:year] %>
+    <%= f.submit "Show" %>
+  </fieldset>
+<% end %>
+
+<hr />
+
 <h2 class="section-header">Driver Manifests</h2>
 
 <%= form_for @driver_query, :url=>url_for(:action=>:daily_manifest), :html=>{:method=>:get} do |f| %>
