have the vertical scroll position for the trip listing return to the same one used before the trip was selected

--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -35,7 +35,8 @@
       $("table.trips").show();
       $('a.new').show(); 
       $('a.new').prev("hr").show();
-      if (start_time) $("#calendar").weekCalendar("gotoWeek", start_time );
+      // console.log ('scroll_positions in load_index_trips', scroll_positions);
+      if (start_time) $("#calendar").weekCalendar("gotoWeek", start_time);
       $("#page-header h1").html("View Trips");
     }
 
@@ -52,14 +53,17 @@
     }
     
     function push_index_state() {
-       if (supports_history_api()) history.pushState({index: calendar_range}, "list trips", "<%= trips_path %>?" + $.param(calendar_range));
+      // console.log ('scroll_positions in push_index_state', scroll_positions);
+      if (supports_history_api()) history.pushState({index: calendar_range, scroll_positions: scroll_positions}, "list trips", "<%= trips_path %>?" + $.param(calendar_range));
     }
     
     function replace_index_state() {
-       if (supports_history_api()) history.replaceState({index: calendar_range}, "list trips", "<%= trips_path %>?" + $.param(calendar_range));
+      // console.log ('scroll_positions in replace_index_state', scroll_positions);
+      if (supports_history_api()) history.replaceState({index: calendar_range, scroll_positions: scroll_positions}, "list trips", "<%= trips_path %>?" + $.param(calendar_range));
     }
     
     function push_edit_state(path) {
+      // console.log ('scroll_positions in push_edit_state', scroll_positions);
       if (supports_history_api()) history.pushState({edit: path}, "edit trip", path);
     }
     
@@ -69,6 +73,8 @@
 
     window.onpopstate = function(event) {
       if (event.state) {
+        // console.log('event.state in onpopstate', event.state);
+        scroll_positions = event.state['scroll_positions'];
         if (event.state['index']) load_index_trips(event.state['index'].start * 1000);
         if (event.state.edit) $.get(event.state.edit, function(data){ load_edit_trip(data.form) }, "json");
       }
@@ -102,7 +108,7 @@
       }
     })
     
-    var calendar_range;
+    var calendar_range, scroll_positions;
 
     $('#calendar').weekCalendar({
         date: <%= @start && @start > 0 ? @start * 1000 : "new Date()" %>,
@@ -152,8 +158,10 @@
           $.getJSON('<%= trips_path :json %>',
             calendar_range,
             function(data, textStatus, jqXHR){  
+              // console.log ('scroll_positions in getJSON', scroll_positions);
+              
               // we probably didn't have the right range before, so now  we should update the state
-              if ( on_trip_index() ) replace_index_state(); 
+              if ( on_trip_index() ) replace_index_state();
                           
               callback(data.events);              
 
@@ -164,6 +172,9 @@
                 table.append(row);
               })
               $("tr:odd").addClass("odd");
+              
+              if (scroll_positions) window.scrollTo(scroll_positions.scrollX, scroll_positions.scrollY);
+              scroll_positions = null;
             }
           );
         },
@@ -242,6 +253,9 @@
     });
     
     $('tr.trip a[data-remote]').live('ajax:success', function(e, data, status, xhr){
+      scroll_positions = {scrollX: $(window).scrollLeft(), scrollY: $(window).scrollTop()};
+      // console.log ('scroll_positions after setting', scroll_positions);
+      replace_index_state(); // make sure the scrollstate is recorded
       push_edit_state($(this).attr("href"));
       load_edit_trip(data.form);
     });
