--- a/app/views/trips/_list.html.erb
+++ b/app/views/trips/_list.html.erb
@@ -6,9 +6,9 @@
 </div>
 
 <div id="expand_calendar" style="display:none;">
-  <button class="ui-button ui-widget ui-state-default ui-button-text-icon-primary ui-button-icon-only ui-corner-left ui-corner-right" title="Expand">
+  <button class="ui-button ui-widget ui-state-default ui-button-text-icon-primary ui-button-icon-only ui-corner-left ui-corner-right" title="Large Calendar">
     <span class="ui-button-icon-primary ui-icon ui-icon-arrowthickstop-1-s"></span>
-    <span class="ui-button-text">expand</span>
+    <span class="ui-button-text">Large Calendar</span>
   </button>
 </div>
 
