--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -130,18 +130,24 @@
       <tr>
         <th>Name</th>
         <th></th>
-        <% if can? :edit, DevicePool %>
-          <th></th>
-        <% end %>
+        <th></th>
+        <th></th>
         <th>Drivers</th>
       </tr>
       <% for device_pool in @provider.device_pools.sort {|a,b| a.name <=> b.name} %>
         <tr>
           <td><%= device_pool.name %></td>
           <td><span class="device-pool-color" style="background-color:#<%= device_pool.color %>;"> </span></td>
-          <% if can? :edit, device_pool %>
-            <td><%= link_to "Edit", edit_device_pool_path(device_pool), :class => "edit" %></td>
-          <% end %>
+          <td>
+            <% if can? :edit, device_pool %>
+              <%= link_to "Edit", edit_device_pool_path(device_pool), :class => "edit" %>
+            <% end %>
+          </td>
+          <td>
+            <% if can? :delete, device_pool %>
+              <%= link_to "Delete", device_pool, :confirm => 'Are you sure?', :method => "delete", :class => "delete" %>
+            <% end %>
+          </td>
           <td>
             <table>
             <% if device_pool.device_pool_drivers.length == 0 %>
